#25 load images in email using gihub pages
- handled session timeout error in edit user details
- Moved util functions to util file
- Corrected privacy policy page.
- Fixed issue of closing side-navebar

--- a/css/style.css
+++ b/css/style.css
@@ -1004,6 +1004,9 @@ a.w3_agile_vimeo:hover {
     padding: 1.5em 0;
     background: #f5f5f5;
 }
+.breadcrumbs .container {
+    width: 100% !important;
+}
 .breadcrumb {
     margin-bottom: 0 !important;
     padding: 0 !important;
